# osrd

./: ._LOCAL_1105.gitignore.swp  ._REMOTE_1105.gitignore.swp  .babelrc  .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .gitignore.swp  .gitlab-ci.yml  .gitpod.yml  .taplo.toml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  MAINTAINERS.md  README.md  REUSE.toml  SECURITY.md  _BACKUP_1105.gitignore  build.gradle  codecov.yml  docker-compose-gitpod.yml  docker-compose-host.yml  docker-compose-mac.yml  docker-compose-storybook.yml  docker-compose.yml  flake.nix  init_db.sql  jsconfig.json  load-database.sh  load-generated-infra.sh  make_setup.py  manage.py  openapi.yaml  package-lock.json  package.json  publiccode.yml  tox.ini  tsconfig.json
api/: .gitignore  Dockerfile  README.md  chartos.yml  openapi.yaml  pyproject.toml
api/config/: celery.py  middleware.py  request_logger.py  settings.py  test.py  test_middleware.py  urls.py
api/osrd/: apps.py
api/osrd/migrations/: 0001_initial.py
api/osrd_infra/: admin.py  serializers.py  tests.py  urls.py  utils.py
api/osrd_infra/layers/: __init__.py  generate_layer.py  layer_creator.py
api/osrd_infra/migrations/: 0001_initial.py  0002_add_electrical_profiles_to_schedules.py  0002_add_signal_aspects.py  0002_add_train_speed_category.py  0002_alter_infra_version.py  0002_alter_train_schedule.py  0002_alter_train_schedules.py  0002_auto_20211214_0933.py  0002_railjson_v2_2_1.py  0002_rollingstockimages.py  0003_alter_speedsectionpartcomponent_entity.py  0003_alter_train_schedules.py  0003_infra_locked.py  0003_rollingstockimages.py  0003_tracklinklayer.py  0004_add_loading_gauges.py  0004_add_signal_fields.py  0004_make_speed_category_optional.py  0004_operationalstudy_project_remove_timetable_infra_and_more.py  0004_trainschedulemodel_options.py  0005_operationalstudy_project_remove_timetable_infra_and_more.py  0005_rm_tvd_sections.py  0005_rollingstock_add_electrification.py  0005_search_engine.py  0005_tracksectionelectrificationtypecomponent.py  0006_railjson_v3.py  0006_rm_generated.py  0006_switchlayer.py  0007_add_rolling_stock_type.py  0007_alter_vmax.py  0007_lpvpanellayer.py  0007_move_electrical_profile_set.py  0008_add_generated_tables.py  0008_add_path_route_type.py  0008_trainschedulemodel_adapt_speed_limit_category.py  0009_add_infra_version.py  0009_alter_signalmodel_data.py  0009_detectorlayer.py  0009_rolling_stocks_v3_0.py  0009_tile_bbox.py  (+41 more)
api/static/: example_rolling_stock.json
api/utils/: entity_creator.py
chartos/: Dockerfile  README.md  chartos.yml  openapi.yaml  pyproject.toml  run.sh
chartos/chartos/: __init__.py  app.py  config.py  dbinit.py  layer_cache.py  make_app.py  modify.py  psql.py  redis.py  settings.py  views.py
chartos/tests/: conftest.py  test_data.py  test_insert.py  test_tiles.py
core_controller/: Cargo.toml  Dockerfile
core_controller/src/: api.rs  config.rs  control_loop.rs  main.rs
editoast/: .dockerignore  .env  Cargo.toml  Dockerfile  OSRD.session.sql  README.md  diesel.toml  generate_routes.rs  map_layers.yml  openapi.json  openapi.yaml  openapi.yml  openapi_legacy.yaml  osrd.session.sql  search.yml  signal_sprites.yml
editoast/editoast_authz/: Cargo.toml
editoast/editoast_common/: Cargo.toml
editoast/editoast_derive/: Cargo.toml
editoast/editoast_models/: Cargo.toml
editoast/editoast_osrdyne_client/: Cargo.toml
editoast/editoast_schemas/: Cargo.toml
editoast/editoast_search/: Cargo.toml
editoast/osm_to_railjson/: Cargo.toml  README.md
editoast/osrd_containers/: Cargo.toml
editoast/src/: api_error.rs  clear.rs  client.rs  cors.rs  db_connection.rs  documents.rs  error.rs  fixtures.rs  generate.rs  infra.rs  infra_cache.rs  main.rs  projects.rs  redis_utils.rs  response.rs  schema.rs  study.rs  tables.rs  valkey_utils.rs  views.rs
gateway/: Cargo.toml  Dockerfile  README.md  gateway.prod.sample.toml  gateway.toml  openapi.yaml
gateway/actix_auth/: Cargo.toml
gateway/actix_proxy/: Cargo.toml
gateway/src/: config.rs  config_parser.rs  main.rs  proxy_config.rs  request_modifier.rs  websocket_proxy.rs
osrd_schemas/: pyproject.toml
osrd_schemas/osrd_schemas/: generated.py  infra.py  path.py
osrdyne/: Cargo.toml  Dockerfile
osrdyne/configuration_templates/: process-compose-driver.yaml  process-compose.yaml
osrdyne/src/: api.rs  config.rs  drivers.rs  key.rs  main.rs  management_client.rs  pool.rs  queue_controller.rs  status_tracker.rs  target_tracker.rs  watch_logger.rs
python/api/: .pre-commit-config.yaml  README.md  openapi.yaml  pyproject.toml
python/osrd_schemas/: README.md  pyproject.toml  setup.py
python/railjson_generator/: README.md  pyproject.toml  setup.py
tests/: .gitignore  README.md  check_routes.py  conftest.py  pyproject.toml  run_integration_tests.py
tests/fuzzer/: compare_pathfinding_results.py  fuzzer.py  fuzzer_v2.py
tests/infra-scripts/: README.md  circle_infra.py  example_script.py  nested_switches.py  one_line.py  overlapping_routes.py  small_infra.py  three_trains.py  tiny_infra.py
tests/tests/: __init__.py  curl_infra_list.py  get_and_update_schedule_result.py  get_api_root.py  get_conflicts.py  get_infras.py  get_rolling_stocks.py  get_schedule.py  get_schedule_result.py  get_timetable.py  get_version.py  infra.py  path.py  pathfinding_small_infra.py  run_fuzzer.py  run_fuzzer_outputs.py  run_pathfinding.py  run_simulation.py  scenario.py  services.py  test_api_root.py  test_compare_pathfinding_results.py  test_e2e.py  test_infra.py  test_pathfinding.py  test_regressions.py  test_regressions_v2.py  test_rolling_stock.py  test_rtk_sync.py  test_scenario.py  test_simulation.py  test_stdcm.py  test_timetable.py  test_timetable_v2.py  test_train_schedule.py  test_version.py  test_with_fuzzer.py  timetable_v2.py
train-sim/: .gitignore  Cargo.toml  README.md  uniffi.toml
train-sim/cross_language_tests/: expected_output.json  input.json
train-sim/kotlin_bindings/: build.gradle  gradle.properties
train-sim/src/: lib.rs
train-sim/uniffi-bindgen/: Cargo.toml
(+7112 files in other folders)
