[tool.poetry]
name = "osrd"
version = "0.1.0"
description = ""
authors = ["DGEX Solutions <contact@dgexsol.fr>"]

[tool.poetry.dependencies]
# base
python = ">=3.8,<3.11"
django = "4.0.6"
numpy = "1.23.0"
intervaltree = "3.1.0"
psycopg2-binary = "2.9.3"
djangorestframework = "3.13.1"
djangorestframework-gis = "1.0"
django-redis = "5.2.0"
jsonschema = "4.6.2"
requests = "2.28.1"
pillow = "^9"
pydantic = "1.9.1"
geojson-pydantic = "0.4.2"

# production
gunicorn = {version = "20.1.0", optional = true}
sentry-sdk = {version = "1.7.2", optional = true}
uvloop = {version = "0.16.0", optional = true}
httptools = {version = "0.4.0", optional = true}
uvicorn = {version = "0.18.2", optional = true}

[tool.poetry.extras]
production = [
    "gunicorn",
    "sentry-sdk",
    "uvloop",
    "httptools",
    "uvicorn",
]

[tool.poetry.dev-dependencies]
django-debug-toolbar = "3.5.0"
black = "22.6.0"
isort = "5.10.1"
pyproject-flake8 = "0.0.1a4"
django-cors-headers = "3.13.0"

[tool.flake8]
ignore = "W503,E203"
max-line-length = 120
exclude = [
    "__pycache__",
    "*/migrations/*",
    "venv/",
    "config/",
]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
