[package]
name = "editoast"
license.workspace = true
version.workspace = true
edition.workspace = true

[workspace]
members = [
  ".",
  "editoast_common",
  "editoast_derive",
  "editoast_models",
  "editoast_schemas",
  "editoast_search",
  "osm_to_railjson",
]

[workspace.lints.rust]
dependency_on_unit_never_type_fallback = "allow" # this is caused by tracing, we can't do anything about it

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[workspace.dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["serde"] }
derivative = "2.2.0"
diesel = { version = "2.1.6", default-features = false, features = [
  "chrono",
  "postgres",
  "serde_json",
  "uuid",
] }
diesel-async = { version = "0.4.1", default-features = false, features = [
  "deadpool",
  "postgres",
] }
editoast_authz = { path = "./editoast_authz" }
editoast_common = { path = "./editoast_common" }
editoast_derive = { path = "./editoast_derive" }
editoast_models = { path = "./editoast_models" }
editoast_schemas = { path = "./editoast_schemas" }
editoast_search = { path = "./editoast_search" }
enum-map = "2.7.3"
futures = { version = "0.3.30" }
futures-util = { version = "0.3.30" }
geojson = { version = "0.24", default-features = false }
geos = { version = "8.3.1", features = ["json"] }
hostname = "0.4.0"
itertools = "0.13.0"
mvt = "0.9.3"
openssl = "0.10.66"
paste = "1.0.15"
postgis_diesel = { version = "2.3.1", features = ["serde"] }
postgres-openssl = "0.5.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
rangemap = "1.5.1"
rstest = { version = "0.19.0", default-features = false }
serde = "1.0.204"
serde_derive = "1.0.195"
serde_json = "1.0.121"
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["fs", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.11"
tracing = { version = "0.1.40", default-features = false, features = ["log"] }
url = { version = "2.5.2", features = ["serde"] }
utoipa = { version = "4.2.3", features = ["chrono", "uuid"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dependencies]
# For batch dependency updates, see editoast/README.md

async-trait = "0.1.81"
axum = { version = "0.7.5", default-features = false, features = ["multipart"] }
axum-extra = { version = "0.9.3", default-features = false, features = [
  "typed-header",
] }
axum-test = { version = "15.3.0", default-features = false }
axum-tracing-opentelemetry = { version = "0.19.0", default-features = false }
chashmap = "2.2.2"
chrono.workspace = true
clap = { version = "4.5.11", features = ["derive", "env"] }
colored = "2.1.0"
derivative.workspace = true
diesel.workspace = true
diesel-async = { workspace = true }
diesel_json = "0.2.1"
editoast_authz.workspace = true
editoast_common = { workspace = true }
editoast_derive.workspace = true
editoast_models.workspace = true
editoast_schemas.workspace = true
editoast_search = { workspace = true }
enum-map.workspace = true
enumset = "1.1.5"
futures.workspace = true
futures-util.workspace = true
geos.workspace = true
headers = "0.4.0"
image = { version = "0.25.2", default-features = false, features = [
  "bmp",
  "gif",
  "jpeg",
  "png",
  "tiff",
  "webp",
] }
inventory = "0.3"
itertools.workspace = true
json-patch = { version = "2.0.0", default-features = false, features = [
  "utoipa",
] }
mime = "0.3.17"
mvt.workspace = true
opentelemetry = { version = "0.23.0", default-features = false, features = [
  "trace",
] }
opentelemetry-datadog = { version = "0.11.0", default-features = false, features = [
  "intern-std",
  "reqwest-client",
] }
opentelemetry-otlp = { version = "0.16.0", default-features = false, features = [
  "grpc-tonic",
  "trace",
] }
opentelemetry-semantic-conventions = "0.15.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio", "trace"] }
osm_to_railjson = { path = "./osm_to_railjson" }
paste.workspace = true
pathfinding = "4.10.0"
postgis_diesel.workspace = true
rand.workspace = true
rangemap.workspace = true
redis = { version = "0.26.1", default-features = false, features = [
  "cluster-async",
  "connection-manager",
  "tokio-comp",
  "tokio-native-tls-comp",
] }
regex = "1.10.5"
# 0.12.0 to 0.12.4 have weird timeout issues https://github.com/seanmonstar/reqwest/issues/2283
# This bug was introduced between 0.12.0 and 0.12.3.
hostname.workspace = true
lapin = "2.3.1"
ordered-float = { version = "4.2.2", features = ["serde"] }
reqwest = { version = "0.11.27", default-features = false, features = ["json"] }
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
serde_qs = { version = "0.13.0", features = ["axum"] }
serde_yaml = "0.9.34"
sha1 = "0.10"
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util = { version = "0.7.11", features = ["io", "tracing"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
  "cors",
  "fs",
  "limit",
  "normalize-path",
  "trace",
] }
tracing.workspace = true
tracing-opentelemetry = { version = "0.24.0", default-features = false, features = [
  "tracing-log",
] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url.workspace = true
utoipa.workspace = true
uuid.workspace = true
validator = { version = "0.18.1", features = ["derive"] }

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }
axum = { version = "0.7.5", default-features = false, features = [
  "macros",
  "multipart",
] }
editoast_authz = { workspace = true, features = ["fixtures"] }
editoast_models = { workspace = true, features = ["testing"] }
pretty_assertions.workspace = true
rstest.workspace = true
serial_test = "3.1.1"
tempfile.workspace = true

[lints]
workspace = true
