[package]
name = "osrd_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [".", "actix_auth", "actix_proxy"]
# used for cargo test, build, fix, package, bench, doc, tree
default-members = [".", "actix_auth", "actix_proxy"]

[workspace.dependencies]
# common utils
dyn-clone = "1.0.10"
either = "1"
env_logger = "0.10"
futures = "0.3"
futures-util = "0.3.17"
log = "0.4.22"
smallvec = "1.10.0"
thiserror = "1.0.62"

# main crate
actix-files = "0.6"
actix-session = "0.8"
actix-web = "4.2"
actix-web-opentelemetry = { version = "0.16.0", features = ["awc", "metrics"] }
base64ct = "1.4"
figment = "0.10.1"
humantime = "2"
humantime-serde = "1"
opentelemetry = "0.21"
opentelemetry-datadog = { version = "0.9.0", features = ["reqwest-client"] }
opentelemetry-otlp = "0.14.0"
opentelemetry_sdk = { version = "0.21.2", features = [
  "metrics",
  "rt-tokio-current-thread",
] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"

# reverse proxy dependencies
actix = "0.13"
actix-web-actors = "4.1"
awc = { version = "3", features = ["rustls"] } # the http / ws client
bytestring = "1"
ipnet = "2.3"
percent-encoding = "2.3"
phf = "0.11"

# actix_auth
actix-web-httpauth = "0.8"

# switch to https://github.com/ramosbugs/openidconnect-rs/pull/165 if it ever lands
openidconnect = { git = "https://github.com/multun/openidconnect-rs.git", branch = "updated-at-string", features = [
  "accept-string-epoch",
] }
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls-native-roots",
] }
url = "2.5"


[dependencies]
either.workspace = true
env_logger.workspace = true
log.workspace = true

# configuration parsing
base64ct.workspace = true # to parse the session secret key
figment = { workspace = true, features = ["env", "toml"] }
humantime.workspace = true
humantime-serde.workspace = true
serde.workspace = true

# web server
actix-files.workspace = true
actix-session = { workspace = true, features = ["cookie-session"] }
actix-web.workspace = true
actix_auth = { path = "./actix_auth" }
actix_proxy = { path = "./actix_proxy" }

# tracing / metrics
actix-web-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry-datadog.workspace = true
opentelemetry-otlp.workspace = true
opentelemetry_sdk.workspace = true
