[package]
edition = "2021"
name = "osrdyne"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["query"] }
axum-tracing-opentelemetry = "0.21.1"
bollard = "0.16"
env_logger = "0.11.3"
figment = { version = "0.10.19", features = ["env", "yaml"] }
futures-lite = "2.3.0"
http = "1.1.0"
im = "15.1.0"
k8s-openapi = { version = "0.22", features = ["v1_29"] }
kube = { version = "0.93", default-features = false, features = [
  "client",
  "derive",
  "rustls-tls",
] }
lapin = "2.3.4"
opentelemetry = "0.24.0"
opentelemetry-otlp = "0.17.0"
opentelemetry-semantic-conventions = "0.16.0"
opentelemetry_sdk = { version = "0.24.1", features = ["rt-tokio"] }
percent-encoding = "2.3.1"
priority-queue = "2.0.3"
reqwest = { version = "0.12.4", default-features = false, features = [
  "json",
  "rustls-tls",
] }
schemars = "0.8.21"
serde = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
smallvec = { version = "1.13.2", features = ["serde"] }
thiserror = "1.0.63"
thunderdome = "0.6.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.25.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
