[tool.poetry]
name = "tests"
version = "0.1.1"
description = "Integration tests"
authors = ["OSRD <contact@osrd.fr>"]

[tool.poetry.dependencies]
osrd-schemas = { path = "../python/osrd_schemas/", develop = true }
pytest = "^7.2.2"
pytest-cov = "^4.1.0"
python = ">=3.9,<=3.12"
railjson-generator = { path = "../python/railjson_generator/", develop = true }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
pyproject-flake8 = "^6.0.0.post1"
pytype = { platform = "linux", version = "^2023.10.17" }

[tool.flake8]
ignore = "W503,E203"
max-line-length = 120
exclude = [".venv/"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytype]
inputs = ["fuzzer", "infra-scripts", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
