[package]
name = "train-sim"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[workspace]
members = [".", "uniffi-bindgen"]

[workspace.dependencies]
uniffi = "0.27"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uniffi.workspace = true

[build-dependencies]
uniffi = { workspace = true, features = ["build"] }
