[package]
name = "editoast_derive"
license.workspace = true
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.20"
paste.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
serde_json.workspace = true
syn = "2.0"

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions = "1.4.1"

[lints]
workspace = true
